--- a/index.html
+++ b/index.html
@@ -262,7 +262,8 @@
                             <h4 class="text-white font-bold text-sm">AWS Certified</h4>
                             <div class="text-slate-400 text-xs">Solutions Architect Associate</div>
                             <span
-                                class="inline-block mt-1 px-2 py-0.5 rounded text-[10px] bg-green-500/10 text-green-400 border border-green-500/20">Active</span>
+                                class="inline-block mt-1 px-2 py-0.5 rounded text-[10px] bg-blue-500/10 text-blue-400 border border-blue-500/20">In
+                                Progress</span>
                         </div>
                     </div>
                     <!-- Cert 2 -->
@@ -275,8 +276,8 @@
                             <h4 class="text-white font-bold text-sm">CKA</h4>
                             <div class="text-slate-400 text-xs">Certified Kubernetes Admin</div>
                             <span
-                                class="inline-block mt-1 px-2 py-0.5 rounded text-[10px] bg-blue-500/10 text-blue-400 border border-blue-500/20">In
-                                Progress</span>
+                                class="inline-block mt-1 px-2 py-0.5 rounded text-[10px] bg-slate-700 text-slate-300 border border-slate-600">Planned
+                                2026</span>
                         </div>
                     </div>
                     <!-- Cert 3 -->
@@ -290,7 +291,7 @@
                             <div class="text-slate-400 text-xs">HashiCorp Infrastructure</div>
                             <span
                                 class="inline-block mt-1 px-2 py-0.5 rounded text-[10px] bg-slate-700 text-slate-300 border border-slate-600">Planned
-                                2026</span>
+                                2027</span>
                         </div>
                     </div>
                 </div>
