Update CV file and modify profile focus in portfolio

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                             <div class="w-3 h-3 rounded-full bg-yellow-500"></div>
                             <div class="w-3 h-3 rounded-full bg-green-500"></div>
                         </div>
-                        <div class="flex-1 text-center text-xs text-slate-400 font-mono">roger@devops-lab:~/profile
+                        <div class="flex-1 text-center text-xs text-slate-400 font-mono">roger@devops:~/profile
                         </div>
                     </div>
                     <div class="p-6 font-mono text-sm space-y-4">
@@ -439,7 +439,7 @@
                             </div>
                         </div>
                         <p class="text-slate-400">
-                            Focus on 5G Radio development tools and cloud networking.
+                            Focus on DevOps engineering and Cloud Computing.
                             <br>
                             <span class="text-dev-accent text-sm mt-2 block"><i class="fas fa-language mr-1"></i>
                                 English Proficiency: TOEIC 975/990</span>
