Remove redundant language entry from portfolio profile

--- a/index.html
+++ b/index.html
@@ -221,8 +221,7 @@
                             &nbsp;&nbsp;<span class="text-sky-300">"location"</span>: <span class="text-emerald-300">"Ho
                                 Chi Minh City"</span>,<br>
                             &nbsp;&nbsp;<span class="text-sky-300">"languages"</span>: [<span
-                                class="text-emerald-300">"English (TOEIC 975)"</span>, <span
-                                class="text-emerald-300">"Vietnamese"</span>],<br>
+                                class="text-emerald-300">"English (TOEIC 975)"</span>],<br>
                             &nbsp;&nbsp;<span class="text-sky-300">"focus"</span>: [<span
                                 class="text-emerald-300">"K8s"</span>, <span class="text-emerald-300">"AWS"</span>,
                             <span class="text-emerald-300">"GitOps"</span>]<br>
