--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Tran Hung Anh | DevOps Engineer</title>
     <meta name="description"
         content="Portfolio of Tran Hung Anh - Junior DevOps Engineer specializing in Kubernetes, CI/CD, and Cloud Infrastructure.">
+        <!-- Favicon: Terminal Prompt Style (Embedded SVG) -->
+    <link rel="icon"
+        href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><rect width=%22100%22 height=%22100%22 rx=%2220%22 fill=%22%230f172a%22/><text x=%2250%22 y=%2255%22 font-family=%22monospace%22 font-weight=%22bold%22 font-size=%2250%22 fill=%22%2338bdf8%22 text-anchor=%22middle%22 dominant-baseline=%22central%22>&gt;_</text></svg>">
+
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link
